fix(page-notice): prevent CTA text from wrapping

--- a/src/less/page-notice/base/page-notice.less
+++ b/src/less/page-notice/base/page-notice.less
@@ -97,6 +97,7 @@ span[role="region"].page-notice {
 }
 
 .page-notice__footer {
+    flex-shrink: 0;
     margin-left: auto;
     padding-left: 16px;
     width: auto;
